syntax = "proto3";

option csharp_namespace = "GrpcServer";

package subscribe;

service SubscriptionService {
  rpc Subscribe (SubscribeRequest) returns (SubscribeResponse);
  rpc Unsubscribe (UnsubscribeRequest) returns (UnsubscribeResponse);
}

message SubscribeRequest {
  string email = 1;
}

message SubscribeResponse {
  string message = 1;
}

message UnsubscribeRequest {
  string email = 1;
}

message UnsubscribeResponse {
  string message = 1;
}
